--- a/C969_Scheduling/appsettings.json
+++ b/C969_Scheduling/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "Settings": {
-    "DBConnectionString": "Server=localhost;Database=scheduling;User Id=test;Password=test;Port=3306;",
+    "DBConnectionString": "Server=127.0.0.1;Database=client_schedule;User Id=sqlUser;Password=Passw0rd!;Port=3306;",
     "LoginHistoryFileName": "LoginHistory.txt"
   }
 }
